chart/templates/metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: connector-service-metrics
spec:
  selector:
    app: connector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: metrics
