chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connector-service
spec:
  selector:
    app: connector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
