chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connector-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - connector.meetmoo.ai
    secretName: scanners-dev-tls
  rules:
  - host: "connector.meetmoo.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: connector-service
            port:
              number: 80
